--- a/src/.travis.yml
+++ b/src/.travis.yml
@@ -1,6 +1,7 @@
+sudo: required
+
 language: generic
 
-sudo: required
 services:
   - docker
 
@@ -8,4 +9,4 @@ before_install:
   - docker build -t alexandrupeter/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true alexandrupeter/docker-react npm run test -- --coverage
+  - docker run alexandrupeter/docker-react npm run test -- --coverage
