--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 sudo: required
 
-language: node_js
-node_js:
-  - "8"
+language: generic
 
 services:
   - docker
@@ -11,4 +9,4 @@ before_install:
   - docker build -t alexandrupeter/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run alexandrupeter/docker-react npm run test -- --coverage
+  - docker run -e CI=true alexandrupeter/docker-react npm run test
